# genovo-engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  generate_missing.py  generate_remaining.py  generate_remaining2.py  generate_remaining3.py
crates/genovo-ffi/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
crates/genovo-ffi/include/: genovo.h  genovo_ffi.h
crates/genovo-ffi/src/: audio_bridge.rs  bindings_gen.rs  cpp_bridge.rs  engine_ffi.rs  lib.rs  lua_bridge.rs  physx_bridge.rs
engine/ai/: Cargo.toml
engine/ai/src/: ai_behaviors.rs  ai_controller.rs  ai_debug.rs  ai_navigation.rs  ai_perception_v2.rs  ai_system.rs  behavior_coordinator.rs  behavior_tree.rs  behavior_tree_runtime.rs  behavior_tree_v2.rs  blackboard.rs  combat_ai.rs  conversation.rs  decision_tree.rs  dialogue_ai.rs  dialogue_manager.rs  emotion_model.rs  enemy_spawning.rs  formation.rs  goal_system.rs  goap.rs  influence_maps.rs  knowledge.rs  learning.rs  lib.rs  navmesh_builder.rs  pathfinding.rs  perception.rs  planner_v2.rs  sensory_memory.rs  spatial_awareness.rs  squad_ai.rs  steering.rs  tactical.rs  utility_ai.rs  world_model.rs
engine/animation/: Cargo.toml
engine/animation/src/: additive_animations.rs  animation_graph.rs  blend_spaces.rs  blend_tree.rs  components.rs  foot_ik.rs  gpu_bridge.rs  ik.rs  lib.rs  morph_targets.rs  retargeting.rs  root_motion.rs  skeleton.rs  spring_bone.rs
engine/assets/: Cargo.toml
engine/assets/src/: asset_bundle.rs  asset_integration.rs  asset_processor.rs  database.rs  font.rs  gltf.rs  hot_reload.rs  image.rs  lib.rs  loader.rs  material.rs  scene_format.rs  shader_compiler_v2.rs
engine/audio/: Cargo.toml
engine/audio/src/: ambience.rs  audio_bus_mixer.rs  audio_engine.rs  audio_graph.rs  audio_listener.rs  audio_mixer.rs  audio_occlusion.rs  audio_playback.rs  audio_resource.rs  audio_snapshot.rs  audio_spatializer_v2.rs  audio_streaming.rs  audio_zones.rs  components.rs  dsp.rs  effects_advanced.rs  lib.rs  midi.rs  music.rs  reverb_processor.rs  voice_synthesis.rs
engine/cinematics/: Cargo.toml
engine/cinematics/src/: camera_system.rs  cutscene_manager.rs  cutscene_player.rs  lib.rs  subtitle_system.rs
engine/core/: Cargo.toml
engine/core/src/: asset_ref.rs  async_runtime.rs  binary_serializer.rs  collections.rs  color.rs  command_buffer.rs  compression.rs  config_system.rs  console_commands.rs  crypto.rs  curve.rs  data_structures.rs  debug_draw.rs  engine_config.rs  engine_loop.rs  engine_runtime.rs  error.rs  event_bus.rs  frame_allocator.rs  geometry.rs  handle.rs  hash_map_fast.rs  input_system.rs  intersect.rs  job_graph.rs  large_world.rs  lib.rs  logging.rs  math_extended.rs  memory_arena.rs  noise.rs  object_model.rs  performance_counters.rs  platform_info.rs  plugin.rs  pool_allocator.rs  profiling.rs  random.rs  resource_manager.rs  serialization.rs  (+10 more)
engine/debug/: Cargo.toml
engine/debug/src/: analytics.rs  command_system.rs  crash_reporter.rs  debug_menu.rs  gizmos.rs  lib.rs  screen_logger.rs
engine/editor/: Cargo.toml
engine/editor/src/: animation_editor.rs  asset_import.rs  curve_editor.rs  editor_camera.rs  editor_preferences.rs  editor_shortcuts.rs  gizmo_renderer.rs  hierarchy.rs  level_editor.rs  lib.rs  material_editor.rs  material_editor_v2.rs  node_graph.rs  particle_editor.rs  performance_monitor.rs  physics_editor.rs  prefab_editor.rs  project.rs  scene_hierarchy.rs  scene_view.rs  selection.rs  settings_editor.rs  snapping.rs  terrain_editor.rs  undo_system.rs  viewport_renderer.rs  world_editor.rs
engine/gameplay/: Cargo.toml
engine/gameplay/src/: ability_system.rs  achievement_v2.rs  ai_companion_v3.rs  ai_director.rs  animation_controller.rs  buff_system.rs  building_system.rs  camera_controller.rs  camera_effects.rs  camera_system.rs  character_controller.rs  character_v2.rs  class_system.rs  collectibles.rs  companion_ai.rs  cooking_system.rs  crafting_v2.rs  damage_system.rs  day_night_cycle.rs  dialogue.rs  dialogue_graph.rs  dialogue_v2.rs  economy.rs  environmental_hazards.rs  event_system.rs  faction_system.rs  game_mode.rs  game_state.rs  game_world.rs  hud_system.rs  input_combo.rs  input_manager.rs  interaction.rs  inventory.rs  level_progression.rs  lib.rs  minimap.rs  mission_system.rs  mount_system.rs  movement.rs  (+25 more)
engine/genovo/: Cargo.toml
engine/genovo/src/: config.rs  engine.rs  lib.rs  prelude.rs
engine/networking/: Cargo.toml
engine/networking/src/: bandwidth_manager.rs  chat_system.rs  client_manager.rs  connection_quality.rs  delta_compression.rs  encryption.rs  game_server.rs  http_client.rs  large_scale_networking.rs  lib.rs  lobby.rs  matchmaking.rs  nat_traversal.rs  netcode.rs  network_object.rs  network_simulation.rs  network_stats.rs  network_transform.rs  packet_serializer.rs  protocol.rs  relay_server.rs  replication_v2.rs  rpc.rs  server_browser.rs  session.rs  snapshot.rs  state_sync.rs  sync.rs  voice.rs  web_socket.rs
engine/physics/: Cargo.toml
engine/physics/src/: aerodynamics.rs  body_manager.rs  breakable_joints.rs  broadphase_sap.rs  buoyancy.rs  character_physics.rs  cloth.rs  collision_detection.rs  collision_detection_v2.rs  collision_events.rs  collision_filters_v2.rs  collision_geometry.rs  components.rs  compound_shapes.rs  constraint_solver.rs  constraint_system.rs  constraints_extended.rs  contact_solver.rs  continuous_collision.rs  conveyor.rs  destruction.rs  explosion.rs  fluid.rs  fracture.rs  fracture_v2.rs  gjk_epa.rs  gravity_field.rs  heightfield_collision.rs  island_manager.rs  joint_motors.rs  joint_system.rs  lib.rs  magnetic_field.rs  motor_joint.rs  narrowphase.rs  particle_physics.rs  particles.rs  physics_debug.rs  physics_interpolation.rs  physics_layers.rs  (+20 more)
engine/platform/: Cargo.toml
engine/platform/src/: clipboard.rs  intrinsics.rs  (+5 more)
engine/render/: Cargo.toml
engine/replay/: Cargo.toml
engine/save_system/: Cargo.toml
engine/scene/: Cargo.toml
engine/terrain/: Cargo.toml
engine/ui/: Cargo.toml
engine/world/: Cargo.toml
genovo-app/: Cargo.toml
genovo-app/src/: main.rs
tests/integration/: Cargo.toml
(+415 files in other folders)
