[package]
name = "genovo-animation"
version.workspace = true
edition.workspace = true

[dependencies]
genovo-core = { workspace = true }
genovo-ecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
profiling = { workspace = true }
