[package]
name = "genovo-assets"
version.workspace = true
edition.workspace = true

[dependencies]
genovo-core = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
profiling = { workspace = true }
