[package]
name = "genovo-audio"
version.workspace = true
edition.workspace = true

[dependencies]
genovo-core = { workspace = true }
genovo-ecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
profiling = { workspace = true }
