[package]
name = "genovo-cinematics"
version.workspace = true
edition.workspace = true

[dependencies]
genovo-core = { workspace = true }
genovo-ecs = { workspace = true }
genovo-animation = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
