[package]
name = "genovo-core"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true }
bytemuck = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
profiling = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
