[package]
name = "genovo"
version.workspace = true
edition.workspace = true
description = "Genovo Game Engine - AAA-tier game engine built in Rust"

[dependencies]
genovo-core = { workspace = true }
genovo-ecs = { workspace = true }
genovo-scene = { workspace = true }
genovo-render = { workspace = true }
genovo-platform = { workspace = true }
genovo-physics = { workspace = true }
genovo-audio = { workspace = true }
genovo-animation = { workspace = true }
genovo-assets = { workspace = true }
genovo-scripting = { workspace = true }
genovo-networking = { workspace = true }
genovo-ai = { workspace = true }
genovo-editor = { workspace = true }
genovo-debug = { workspace = true }
genovo-terrain = { workspace = true }
genovo-cinematics = { workspace = true }
genovo-localization = { workspace = true }
genovo-procgen = { workspace = true }
genovo-ui = { workspace = true }
genovo-save = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
