[package]
name = "genovo-networking"
version.workspace = true
edition.workspace = true

[dependencies]
genovo-core = { workspace = true }
genovo-ecs = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
glam = { workspace = true }
