[package]
name = "genovo-platform"
version.workspace = true
edition.workspace = true

[dependencies]
genovo-core = { workspace = true }
genovo-render = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true }
bitflags = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }
wayland-client = "0.31"
