[package]
name = "genovo-scene"
version.workspace = true
edition.workspace = true

[dependencies]
genovo-core = { workspace = true }
genovo-ecs = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
profiling = { workspace = true }
