[package]
name = "genovo-ui"
version.workspace = true
edition.workspace = true

[dependencies]
genovo-core = { workspace = true }
genovo-render = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
